--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "vimv"
-version = "1.0.1"
+version = "1.1.0"
 authors = ["Darren Mulholland <dmulholl@tcd.ie>"]
 edition = "2018"
 description = "A command line utility for batch renaming files using a text editor."
@@ -11,3 +11,4 @@ repository = "https://github.com/dmulholl/vimv"
 [dependencies]
 arguably = "1.0.0"
 edit = "0.1.2"
+trash = "1.2"
