--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ description = "A command line utility for batch renaming files using a text edit
 license = "MIT"
 homepage = "https://www.dmulholl.com/dev/vimv.html"
 repository = "https://github.com/dmulholl/vimv"
+readme = "readme.md"
 
 [dependencies]
 arguably = "1.0.0"
