--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "vimv"
-version = "1.1.2"
+version = "1.1.3"
 authors = ["Darren Mulholland <dmulholl@tcd.ie>"]
 edition = "2018"
 description = "A command line utility for batch renaming files using a text editor."
@@ -10,6 +10,6 @@ repository = "https://github.com/dmulholl/vimv"
 readme = "readme.md"
 
 [dependencies]
-arguably = "1.0.0"
+arguably = "2.0.0-alpha"
 edit = "0.1.2"
 trash = "1.2"
