--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "vimv"
-version = "1.5.0-alpha.1"
+version = "1.5.0"
 authors = ["Darren Mulholland <dmulholl@tcd.ie>"]
 edition = "2018"
 description = "A command line utility for batch-renaming files using a text editor."
@@ -11,6 +11,6 @@ readme = "readme.md"
 
 [dependencies]
 arguably = "2.0.0"
-edit = "0.1.2"
-trash = "1.2"
-rand = "0.7.3"
+edit = "0.1.3"
+trash = "1.3"
+rand = "0.8.3"
