--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ version = "1.7.3"
 authors = ["Darren Mulholland <dmulholl@tcd.ie>"]
 edition = "2018"
 description = "A command line utility for batch-renaming files using a text editor."
-license = "Unlicense"
+license = "0BSD"
 homepage = "https://www.dmulholl.com/dev/vimv.html"
 repository = "https://github.com/dmulholl/vimv"
 readme = "readme.md"
